crates/rome_diagnostics/tests/macros/category_ident.stderr
error: failed to parse "diagnostic" attribute: expected string literal
 --> tests/macros/category_ident.rs:4:25
  |
4 | #[diagnostic(category = Identifier)]
  |                         ^^^^^^^^^^
